--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -24,6 +24,6 @@
     "types": [],
     "target": "ES2017"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../asset-download/client/components/FormField.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
