--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "postprisma:generate": "shx cp -r node_modules/.prisma/client/index.d.ts ../client/src/types/prismaTypes.d.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "Priyanshu",
   "license": "ISC",
   "description": "",
   "dependencies": {
